-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 14
-
Component/s: core-libs
-
b15
-
generic
-
generic
-
Not verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8245638 | 13.0.4 | Sean Coffey | P4 | Resolved | Fixed | b02 |
| JDK-8234667 | 11.0.6 | Sean Coffey | P4 | Resolved | Fixed | b05 |
| JDK-8239176 | openjdk8u252 | David Alvarez | P4 | Resolved | Fixed | b03 |
| JDK-8236061 | openjdk8u242 | David Alvarez | P4 | Resolved | Fixed | b05 |
In the JDK-8223490 edits[1], line 149 means we return without closing a directory pointer allocated at line 133.
I'd prefer to just move line 133-136 down below the new fast path code in order to eliminate this issue.
[1] https://hg.openjdk.java.net/jdk/jdk/file/8ee083465318/src/java.base/unix/native/libjava/TimeZone_md.c
I'd prefer to just move line 133-136 down below the new fast path code in order to eliminate this issue.
[1] https://hg.openjdk.java.net/jdk/jdk/file/8ee083465318/src/java.base/unix/native/libjava/TimeZone_md.c
- backported by
-
JDK-8234667 Missing closedir call with JDK-8223490
-
- Resolved
-
-
JDK-8236061 Missing closedir call with JDK-8223490
-
- Resolved
-
-
JDK-8239176 Missing closedir call with JDK-8223490
-
- Resolved
-
-
JDK-8245638 Missing closedir call with JDK-8223490
-
- Resolved
-
- relates to
-
JDK-8223490 Optimize search algorithm for determining default time zone
-
- Closed
-