8231124: Missing closedir call with JDK-8223490

Reviewed-by: naoto